--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
 }
@@ -17,7 +21,7 @@ header {
   color: #dd0244;
   font: 28px IMPACT;
   padding: 10px 12px;
-  max-width: 110px;
+  width: 8%;
   border-radius: 30px;
 }
 
@@ -49,6 +53,13 @@ nav ul li .active {
   background-color: #7c265e;
 }
 
+@media only screen and (max-width: 620px) {
+  /* For mobile phones: */
+  li {
+    width: 100%;
+    border-bottom: 1px solid #fff;
+  }
+}
 footer {
   position: fixed;
   bottom: 0;
