--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,11 @@
     box-sizing: border-box;
   }
 
+html{
+    height: 100%;
+}
+
+
 body{
     margin: 0;
 
@@ -23,7 +28,7 @@ header{
     color: #dd0244;
     font: 28px IMPACT;
     padding: 10px 12px;
-    max-width: 110px;
+    width: 8%;
     border-radius: 30px;
 }
 
@@ -64,6 +69,14 @@ nav
         }
     }
 }
+
+@media only screen and (max-width:620px) {
+    /* For mobile phones: */
+    li {
+      width:100%;
+      border-bottom:1px solid #fff;
+    }
+  }
 
 footer{
     position: fixed;
