--- a/css/style.css
+++ b/css/style.css
@@ -17,16 +17,13 @@ header {
 }
 
 .logo {
-  background-color: #fff;
-  color: #dd0244;
+  color: #fff;
   font: 28px IMPACT;
-  padding: 10px 12px;
-  width: 8%;
+  padding: 20px 12px;
   border-radius: 30px;
 }
 
 nav ul {
-  position: fixed;
   background-color: #491647;
   margin: 0;
   padding: 0;
@@ -37,6 +34,9 @@ nav ul {
 nav ul li {
   float: left;
   border-right: 1px solid #fff;
+}
+nav ul li .dropdown {
+  display: inline-block;
 }
 nav ul li a {
   display: block;
@@ -53,16 +53,56 @@ nav ul li .active {
   background-color: #7c265e;
 }
 
-@media only screen and (max-width: 620px) {
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+article {
+  float: left;
+  margin: auto;
+  width: 60%;
+  padding: 0 20px;
+  overflow: hidden;
+}
+
+.ad1, .ad2 {
+  float: left;
+  width: 20%;
+  padding: 8px;
+  margin-top: 7px;
+}
+
+@media only screen and (max-width: 800px) {
   /* For mobile phones: */
   li {
     width: 100%;
     border-bottom: 1px solid #fff;
   }
+
+  article, .ad1, .ad2 {
+    width: 100%;
+  }
 }
 footer {
   position: fixed;
+  border: 3px solid #000;
+  width: 100%;
   bottom: 0;
+  padding: 40px 15px;
+  background-color: #ccc;
+}
+footer a {
+  padding: 10px;
+  margin: 5px;
+  border: 3px solid #000;
+  color: #FFF;
+  font: 14px "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=style.css.map */
