--- a/css/style.scss
+++ b/css/style.scss
@@ -9,6 +9,8 @@ html{
 
 body{
     margin: 0;
+    // background-image: url(../img/flag.jpg);
+    
 
 }
 
@@ -24,18 +26,17 @@ header{
 }
 
 .logo{
-    background-color: #fff;
-    color: #dd0244;
+    // background-color: #fff;
+    color: #fff;
     font: 28px IMPACT;
-    padding: 10px 12px;
-    width: 8%;
+    padding: 20px 12px;
     border-radius: 30px;
 }
 
 nav 
 {
     ul {
-        position: fixed;
+        // position: fixed;
         background-color: #491647;
         margin: 0;
         padding: 0;
@@ -47,6 +48,10 @@ nav
         float: left;
         border-right:1px solid #fff;
 
+        .dropdown{
+            display: inline-block;
+        }
+
 
         a {
             display: block;
@@ -56,6 +61,8 @@ nav
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
+
+              
         }
   
         a:hover:not(.active){
@@ -70,15 +77,60 @@ nav
     }
 }
 
-@media only screen and (max-width:620px) {
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+article{
+    // position: absolute;
+    float: left;
+    margin: auto;
+    width: 60%;
+    padding: 0 20px;
+    overflow: hidden;
+}
+
+.ad1, .ad2{
+    float: left;
+    width: 20%;
+    padding: 8px;
+    margin-top: 7px;
+}
+
+@media only screen and (max-width:800px) {
     /* For mobile phones: */
     li {
       width:100%;
-      border-bottom:1px solid #fff;
+    // float: none;
+    border-bottom:1px solid #fff;
     }
-  }
+  
+
+article, .ad1, .ad2{
+    width: 100%;
+}
+}
 
 footer{
     position: fixed;
+    border: 3px solid #000;    
+    width: 100%;
     bottom: 0;
+    padding: 40px 15px;
+    background-color: #ccc;
+    
+
+    a{
+    padding: 10px;
+    margin: 5px;
+    border: 3px solid #000;    
+    color: #FFF;
+    font: 14px "Lucida Sans Unicode", "Lucida Grande", sans-serif; 
+    text-decoration: none;
+    }
 }
