--- a/css/style.scss
+++ b/css/style.scss
@@ -86,6 +86,10 @@ nav
     z-index: 1;
   }
 
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
 article{
     // position: absolute;
     float: left;
