Adjusting logo into navbar.

--- a/css/style.css
+++ b/css/style.css
@@ -8,23 +8,19 @@ html {
 
 body {
   margin: 0;
+  background-color: #eae7e6;
 }
 
-header {
-  background-color: #dd0244;
-  width: 100%;
-  top: 0;
-}
-
-.logo {
-  color: #fff;
+nav .logo {
+  color: #b687a0;
   font: 28px IMPACT;
   padding: 20px 12px;
   border-radius: 30px;
+  display: inline;
 }
-
 nav ul {
-  background-color: #491647;
+  background-color: #fff;
+  top: 0;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -32,16 +28,12 @@ nav ul {
   width: 100%;
 }
 nav ul li {
-  float: left;
-  border-right: 1px solid #fff;
-}
-nav ul li .dropdown {
-  display: inline-block;
+  float: right;
 }
 nav ul li a {
   display: block;
   font: 14px "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-  color: #FFF;
+  color: #000;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -51,19 +43,6 @@ nav ul li a:hover:not(.active) {
 }
 nav ul li .active {
   background-color: #7c265e;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
 }
 
 article {
@@ -98,7 +77,6 @@ footer {
   width: 100%;
   bottom: 0;
   padding: 40px 15px;
-  background-color: #ccc;
 }
 footer a {
   padding: 10px;
