--- a/css/style.css
+++ b/css/style.css
@@ -8,40 +8,48 @@ html {
 
 body {
   margin: 0;
+  padding: 0;
   background-color: #eae7e6;
 }
 
-nav .logo {
-  color: #b687a0;
-  font: 28px IMPACT;
-  padding: 20px 12px;
-  border-radius: 30px;
-  display: inline;
+a#logo {
+  float: left;
+  display: inline-block;
 }
-nav ul {
-  background-color: #fff;
-  top: 0;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-  overflow: hidden;
+
+.clear {
+  clear: both;
+}
+
+#nav-bar {
+  background-color: #FFF;
+  /*turns nav bar white*/
   width: 100%;
 }
-nav ul li {
+#nav-bar nav {
   float: right;
+  list-style: none;
+  /*gets rid of bullet points*/
+  text-align: left;
+  /*padding: 0px -10px 0px -10px; */
+  margin: 0;
 }
-nav ul li a {
-  display: block;
-  font: 14px "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-  color: #000;
-  text-align: center;
-  padding: 14px 16px;
+#nav-bar nav li {
+  /*max-width: 768px*/
+  display: Inline-block;
+  padding: 10px 9px 10px 9px;
+  /*nav bar text*/
+}
+#nav-bar nav li a {
   text-decoration: none;
+  color: blue;
+  font-size: 14px;
+  padding: 5px 0px 5px 0px;
 }
-nav ul li a:hover:not(.active) {
+#nav-bar nav li a:hover:not(.active) {
   background-color: #111;
 }
-nav ul li .active {
+#nav-bar nav li .active {
   background-color: #7c265e;
 }
 
@@ -73,7 +81,7 @@ article {
 }
 footer {
   position: fixed;
-  border: 3px solid #000;
+  border: 2px solid #000;
   width: 100%;
   bottom: 0;
   padding: 40px 15px;
@@ -81,7 +89,7 @@ footer {
 footer a {
   padding: 10px;
   margin: 5px;
-  border: 3px solid #000;
+  border: 2px solid #000;
   color: #FFF;
   font: 14px "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   text-decoration: none;
