--- a/css/style.scss
+++ b/css/style.scss
@@ -9,13 +9,52 @@ html{
 
 body{
     margin: 0;
+    padding: 0;
     // background-image: url(../img/flag.jpg);
     background-color: #eae7e6;
-    
-
 }
 
+a#logo { 
+    float: left;
+    display: inline-block;
+  }
 
+  .clear {
+    clear: both;
+  }
+
+#nav-bar {
+    background-color: #FFF;  /*turns nav bar white*/
+    width: 100%;
+
+    nav {
+        float: right;
+        list-style: none;    /*gets rid of bullet points*/ 
+          text-align: left;
+          /*padding: 0px -10px 0px -10px; */
+        margin: 0;
+
+        li {                                                             /*max-width: 768px*/
+            display:Inline-block;
+            padding: 10px 9px 10px 9px;                               /*nav bar text*/
+        
+            a {                                               
+                text-decoration: none;
+                color: blue;
+                font-size: 14px;
+                padding: 5px 0px 5px 0px
+            }
+
+            a:hover:not(.active){
+                            background-color: #111;
+                        }
+                  
+                        .active {
+                            background-color: #7c265e;
+                        }
+        }
+      }
+    }
 
 // header{
 //     background-color:fff;
@@ -31,58 +70,83 @@ body{
 // }
 
 
+//---------------------Previous CSS----------------------------
 
-nav 
-{
-    .logo{
-        // background-color: #fff;
-        color: #b687a0;
-        font: 28px IMPACT;
-        padding: 20px 12px;
-        border-radius: 30px;
-        display: inline;
-    }
+// nav 
+// {
+//     width: 100%;
+//     background-color:#fff;
+//         top: 0;
+//         margin: 0;
+
+//     a.logo{
+//         // background-color: #fff;
+//         float:left;
+//         color: #b687a0;
+//         font: 22px IMPACT;
+//         padding: 16px 18px;
+//         text-decoration: none;
+//         // display: inline;
+//         text-align: center;
+
+//     }
        
-    ul {
-        // position: fixed;
-        background-color:#fff;
-        top: 0;
-        margin: 0;
-        padding: 0;
-        list-style-type: none;
-        overflow: hidden;
-        width: 100%;
+//     ul {
+//         // position: fixed;
+//         // display: inline;
+//         list-style-type: none;
+//         // overflow: hidden;
+//         // padding: 0px;
+//         // margin: 0px;
+//         // text-align: center;
+//         display:inline-block;
+//         // vertical-align:top;
+//         // float: right;
+        
+        
 
-    li{
-        float: right;
-        // border-right:1px solid #fff;
+//     li{
+//         // float: right;
+//         // border-right:1px solid #fff;
 
-        // .dropdown{
-        //     display: inline-block;
-        // }
+//         // .dropdown{
+//         //     display: inline-block;
+//         // }
+//         // list-style-type: none;
+//         padding: 0px;
+//         // height: 24px;
+//         // margin-top: 4px;
+//         // margin-bottom: 4px;
+//         display: inline;
 
     
-        a {
-            display: block;
-            // font: 14px Segoe UI; 
-            font: 14px "Lucida Sans Unicode", "Lucida Grande", sans-serif; 
-            color: #000;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
+//         a {
+//             // display: block;
+//             // // font: 14px Segoe UI; 
+//             // font: 14px "Lucida Sans Unicode", "Lucida Grande", sans-serif; 
+//             // color: #000;
+//             text-align: center;
+//             // padding: 14px 16px;
+//             // text-decoration: none;
+            
+//             color: #000;
+//             font: 14px Segoe UI;
+//             text-decoration: none;
+//             line-height: 70px;
+//             padding: 5px 15px;
+//         }
   
-        a:hover:not(.active){
-            background-color: #111;
-        }
+//         a:hover:not(.active){
+//             background-color: #111;
+//         }
   
-        .active {
-            background-color: #7c265e;
-        }
+//         .active {
+//             background-color: #7c265e;
+//         }
 
-        }
-    }
-}
+//         }
+//     }
+// }
 
 // .dropdown-content {
 //     display: none;
@@ -129,7 +193,7 @@ article, .ad1, .ad2{
 
 footer{
     position: fixed;
-    border: 3px solid #000;    
+    border: 2px solid #000;    
     width: 100%;
     bottom: 0;
     padding: 40px 15px;
@@ -139,7 +203,7 @@ footer{
     a{
     padding: 10px;
     margin: 5px;
-    border: 3px solid #000;    
+    border: 2px solid #000;    
     color: #FFF;
     font: 14px "Lucida Sans Unicode", "Lucida Grande", sans-serif; 
     text-decoration: none;
