--- a/css/style.css
+++ b/css/style.css
@@ -12,44 +12,45 @@ body {
   background-color: #eae7e6;
 }
 
-a#logo {
-  float: left;
-  display: inline-block;
-}
-
-.clear {
-  clear: both;
-}
-
-#nav-bar {
-  background-color: #FFF;
-  /*turns nav bar white*/
+nav {
   width: 100%;
-}
-#nav-bar nav {
-  float: right;
-  list-style: none;
-  /*gets rid of bullet points*/
-  text-align: left;
-  /*padding: 0px -10px 0px -10px; */
+  background-color: #fff;
+  top: 0;
   margin: 0;
 }
-#nav-bar nav li {
-  /*max-width: 768px*/
-  display: Inline-block;
-  padding: 10px 9px 10px 9px;
-  /*nav bar text*/
-}
-#nav-bar nav li a {
+nav a.logo {
+  float: left;
+  color: #b687a0;
+  font: 22px IMPACT;
+  padding: 16px 18px;
   text-decoration: none;
-  color: blue;
-  font-size: 14px;
-  padding: 5px 0px 5px 0px;
+  text-align: center;
 }
-#nav-bar nav li a:hover:not(.active) {
+nav ul {
+  list-style-type: none;
+  overflow: hidden;
+  padding: 0px;
+  margin: 0px;
+  text-align: center;
+  display: inline-block;
+  vertical-align: top;
+}
+nav ul li {
+  padding: 0px;
+  display: inline;
+}
+nav ul li a {
+  text-align: center;
+  color: #000;
+  font: 14px Segoe UI;
+  text-decoration: none;
+  line-height: 70px;
+  padding: 5px 15px;
+}
+nav ul li a:hover:not(.active) {
   background-color: #111;
 }
-#nav-bar nav li .active {
+nav ul li .active {
   background-color: #7c265e;
 }
 
