--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 nav {
   width: 100%;
   background-color: #fff;
-  margin: 0 auto;
+  margin: 0;
   height: 60px;
   text-align: center;
   box-shadow: 0px 1px 10px #333;
