--- a/css/style.scss
+++ b/css/style.scss
@@ -18,7 +18,7 @@ nav
 {
     width: 100%;
     background-color:#fff;
-    margin: 0 auto;
+    margin: 0;
     height: 60px;
     text-align: center;
     box-shadow:0px 1px 10px #333;  
@@ -74,9 +74,6 @@ nav
 .main-body{
     margin-top: 20px;
 }
-
-
-
 
 /* Clear floats after the columns */
 .main-body:after {
