--- a/css/style.scss
+++ b/css/style.scss
@@ -47,6 +47,7 @@ nav
     li{
         // display: inline;
         float: left;
+        border-right:1px solid #ccc;
         
         a {
             display: block;
@@ -56,6 +57,7 @@ nav
             text-decoration: none;
             line-height: 60px;
             padding: 0px 15px;
+            
         }
   
         a:hover:not(.active){
@@ -64,7 +66,8 @@ nav
         }
   
         .active {
-            background-color: #7c265e;
+            // background-color: #7c265e;
+            background-color: #b687a0;
         }
 
         }
@@ -109,15 +112,13 @@ article{
     li {
       width:100%;
     // float: none;
-    border-bottom:1px solid #fff;
+    border-bottom:1px solid #ccc;
     }
 
     a#logo{
         width: 100%;
 
     }
-
-  
 
 article, .ad1, .ad2{
     width: 100%;
