--- a/css/style.scss
+++ b/css/style.scss
@@ -61,7 +61,7 @@ nav
         }
   
         a:hover:not(.active){
-            background-color: #111;
+            background-color: #7F5E70;
             color: #fff;
         }
   
@@ -130,14 +130,15 @@ footer{
     border: 2px solid #000;    
     width: 100%;
     bottom: 0;
-    padding: 40px 15px;
+    padding: 30px 10px;
     // background-color: #ccc;
     
 
     a{
+    float: left;
     text-decoration: none;
-    padding: 10px;
-    margin: 5px;
+    padding: 5px;
+    margin: 2px;
     border: 2px solid #000;
     font: 14px "Lucida Sans Unicode", "Lucida Grande", sans-serif; 
     color: #000;
