--- a/css/style.scss
+++ b/css/style.scss
@@ -10,6 +10,7 @@ html{
 body{
     margin: 0;
     padding: 0;
+    // overflow: auto;
     // background-image: url(../img/flag.jpg);
     // background-color: #eae7e6;
 }
@@ -23,6 +24,19 @@ nav
     text-align: center;
     box-shadow:0px 1px 10px #333;  
 
+    #ctheme{
+        float: right;
+        padding: 12px;
+        background-color: #6e4719;
+        font: 14px Segoe UI;
+        border: none;
+        text-decoration: none;
+        text-align: center;
+        color: #fff;
+    }
+
+    #ctheme:focus {outline:0;}
+
     a#logo{
         float:left;
         color: #b687a0;
@@ -30,7 +44,7 @@ nav
         padding: 16px 18px;
         text-decoration: none;
         text-align: center;
-
+        
     }
        
     ul {
@@ -126,7 +140,7 @@ article, .ad1, .ad2{
 }
 
 footer{
-    position: fixed;
+    // position: fixed;
     border: 2px solid #000;    
     width: 100%;
     bottom: 0;
@@ -135,8 +149,9 @@ footer{
     
 
     a{
-    float: left;
+    // float: left;
     text-decoration: none;
+    overflow: auto;
     padding: 5px;
     margin: 2px;
     border: 2px solid #000;
