--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   box-sizing: border-box;
 }
@@ -79,6 +80,23 @@ nav ul li .active {
   content: "";
   display: table;
   clear: both;
+}
+
+ul.breadcrumb {
+  padding: 6px 14px;
+  list-style: none;
+}
+ul.breadcrumb li {
+  display: inline;
+}
+ul.breadcrumb li a {
+  color: green;
+  text-decoration: none;
+}
+ul.breadcrumb li + li:before {
+  padding: 8px;
+  color: black;
+  content: "/ ";
 }
 
 article {
