--- a/css/style2.css
+++ b/css/style2.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   box-sizing: border-box;
 }
@@ -19,22 +20,9 @@ nav {
   text-align: center;
   box-shadow: 0px 1px 10px #333;
 }
-nav #ctheme {
-  float: right;
-  padding: 12px;
-  background-color: #a4a7ae;
-  font: 14px Segoe UI;
-  border: none;
-  text-decoration: none;
-  text-align: center;
-  color: #fff;
-}
-nav #ctheme:focus {
-  outline: 0;
-}
 nav a#logo {
   float: left;
-  color: #0e2150;
+  color: #b687a0;
   font: 22px IMPACT;
   padding: 16px 18px;
   text-decoration: none;
@@ -63,15 +51,29 @@ nav ul li a {
   padding: 0px 15px;
 }
 nav ul li a:hover:not(.active) {
-  background-color: #3b4b7d;
+  background-color: #7F5E70;
   color: #fff;
 }
 nav ul li .active {
-  background-color: #8187b1;
+  background-color: #b687a0;
 }
 
 .main-body {
   margin-top: 20px;
+}
+.main-body article {
+  float: left;
+  margin: auto;
+  width: 60%;
+  padding: 8px 20px;
+  overflow: hidden;
+  border: 2px solid #000;
+}
+.main-body .ad1, .main-body .ad2 {
+  float: left;
+  width: 20%;
+  padding: 8px;
+  border: 2px solid #000;
 }
 
 /* Clear floats after the columns */
@@ -79,6 +81,21 @@ nav ul li .active {
   content: "";
   display: table;
   clear: both;
+}
+
+#ctheme {
+  float: right;
+  padding: 21px 18px;
+  background-color: #665358;
+  font: 14px Segoe UI;
+  border: none;
+  text-decoration: none;
+  text-align: center;
+  color: #fff;
+}
+
+#ctheme:focus {
+  outline: 0;
 }
 
 ul.breadcrumb {
@@ -95,58 +112,46 @@ ul.breadcrumb li a {
 ul.breadcrumb li + li:before {
   padding: 8px;
   color: black;
-  content: "> ";
+  content: "/ ";
 }
 
-article {
-  float: left;
-  margin: auto;
-  width: 60%;
-  padding: 8px 20px;
-  overflow: hidden;
-  border: 2px solid #000;
-}
-
-.ad1, .ad2 {
-  float: left;
-  width: 20%;
-  padding: 8px;
-  border: 2px solid #000;
+#aurora {
+  width: 100%;
+  height: auto;
 }
 
 @media only screen and (max-width: 800px) {
   /* For mobile phones: */
-  ul {
+  nav ul {
     width: 100%;
   }
-
-  li {
+  nav li {
     width: 100%;
     border-bottom: 1px solid #ccc;
   }
-
-  a#logo {
+  nav a#logo {
     width: 100%;
   }
 
-  article, .ad1, .ad2 {
+  .main-body article, .main-body .ad1, .main-body .ad2 {
     width: 100%;
   }
-}
-footer {
-  border: 2px solid #000;
-  width: 100%;
-  bottom: 0;
-  padding: 30px 10px;
-}
-footer a {
-  text-decoration: none;
-  overflow: auto;
-  padding: 5px;
-  margin: 2px;
-  border: 2px solid #000;
-  font: 14px "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-  color: #000;
+
+  footer {
+    border: 2px solid #000;
+    width: 100%;
+    bottom: 0;
+    padding: 30px 10px;
+  }
+  footer a {
+    text-decoration: none;
+    overflow: auto;
+    padding: 5px;
+    margin: 2px;
+    border: 2px solid #000;
+    font: 14px "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    color: #000;
+  }
 }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=style2.css.map */
