--- a/css/style.scss
+++ b/css/style.scss
@@ -151,7 +151,7 @@ nav
     li+li:before {
         padding: 8px;
         color: black;
-        content: "/\00a0";
+        content: ">";
       }
 
   }
