--- a/css/style.css
+++ b/css/style.css
@@ -69,10 +69,17 @@ nav ul li .active {
   border: 2px solid #000;
 }
 .main-body .ad1, .main-body .ad2 {
+  text-align: center;
   float: left;
   width: 20%;
-  padding: 8px;
+  padding: 20px;
   border: 2px solid #000;
+}
+
+hr {
+  background-color: #fff;
+  border-color: #fff;
+  width: 200px;
 }
 
 /* Clear floats after the columns */
