--- a/css/style.scss
+++ b/css/style.scss
@@ -89,12 +89,19 @@ nav
     }
     
     .ad1, .ad2{
+        text-align: center;
         float: left;
         width: 20%;
-        padding: 8px;
+        padding: 20px;
         border: 2px solid #000;    
     }
     
+}
+
+hr{
+    background-color: #fff;
+    border-color: #fff; 
+    width: 200px;
 }
 
 /* Clear floats after the columns */
