--- a/css/style2.scss
+++ b/css/style2.scss
@@ -109,9 +109,9 @@ nav
     
         position: fixed;
         top: 50%;
-        -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
+        // -webkit-transform: translateY(-50%);
+        // -ms-transform: translateY(-50%);
+        // transform: translateY(-50%);
     
         text-align: center;
         padding: 16px;
