--- a/css/style2.scss
+++ b/css/style2.scss
@@ -109,11 +109,11 @@ nav
     
         position: fixed;
         top: 50%;
-        // -webkit-transform: translateY(-50%);
-        // -ms-transform: translateY(-50%);
-        // transform: translateY(-50%);
-    
-        text-align: center;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+
+        // text-align: center;
         padding: 16px;
         transition: all 0.3s ease;
         color: white;
