--- a/css/style2.scss
+++ b/css/style2.scss
@@ -128,6 +128,10 @@ nav
         // text-decoration: none;
         // text-align: center;
         // color: #fff;
+
+        #moon{
+            display: none;
+        }
     }
     //   Changes
 
