--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ hr {
   transition: all 0.3s ease;
   color: white;
   font-size: 20px;
-  background-color: #8ae954;
+  background-color: #2d2d2d;
 }
 #ctheme #sun {
   display: none;
