--- a/css/style.scss
+++ b/css/style.scss
@@ -128,7 +128,7 @@ hr{
     transition: all 0.3s ease;
     color: white;
     font-size: 20px;
-    background-color: #8ae954;
+    background-color: #2d2d2d;
 
     // float: right;
     // padding: 10px 10px;
