--- a/css/style2.scss
+++ b/css/style2.scss
@@ -1,4 +1,5 @@
 * {
+    background-color: #2d2d2d;
     box-sizing: border-box;
   }
 
@@ -26,9 +27,9 @@ nav
 
     a#logo{
         float:left;
-        color: #b687a0;
+        color: white;
         font: 22px IMPACT;
-        padding: 16px 18px;
+        padding: 17px 18px;
         text-decoration: none;
         text-align: center;
         
@@ -53,7 +54,7 @@ nav
         a {
             display: block;
             text-align: center;
-            color: #000;
+            color: #fff;
             font: 14px Segoe UI;
             text-decoration: none;
             line-height: 60px;
@@ -62,13 +63,13 @@ nav
         }
   
         a:hover:not(.active){
-            background-color: #7F5E70;
-            color: #fff;
+            background-color: #818181;
+            color: #000;
         }
   
         .active {
             // background-color: #7c265e;
-            background-color: #b687a0;
+            background-color: #000;
         }
 
         }
@@ -80,19 +81,29 @@ nav
 
     article{
         // position: absolute;
+        color: #fff;
         float: left;
         margin: auto;
         width: 60%;
         padding: 8px 20px;
         overflow: hidden;
-        border: 2px solid #000;    
+        border: 2px solid #fff;    
     }
     
-    .ad1, .ad2{
+    .ad1{
+        color: #fff;
         float: left;
         width: 20%;
         padding: 8px;
-        border: 2px solid #000;    
+        border: 2px solid #fff; 
+    }
+
+    .ad2{
+        color: #fff;
+        float: left;
+        width: 20%;
+        padding: 8px;
+        border: 2px solid #fff;    
     }
     
 }
@@ -115,7 +126,7 @@ nav
 
         // text-align: center;
         padding: 16px;
-        transition: all 0.3s ease;
+        transition: all 0.1s ease;
         color: white;
         font-size: 20px;
         background-color: #b687a0;
@@ -132,6 +143,9 @@ nav
         #moon{
             display: none;
         }
+        #sun{
+            background-color: #b687a0;
+        }
     }
     //   Changes
 
@@ -141,11 +155,11 @@ nav
     // background-color: #eee;
 
     li {
-        
+        color: #fff;
         display: inline;
     
         a {
-            color: green;
+            color: #818181;
             text-decoration: none;
 
         }
@@ -154,7 +168,7 @@ nav
 
     li+li:before {
         padding: 8px;
-        color: black;
+        color: #fff;
         content: "/\00a0";
       }
 
@@ -231,7 +245,7 @@ nav
 
 footer{
     // position: fixed;
-    border: 2px solid #000;    
+    border: 2px solid #fff;    
     width: 100%;
     bottom: 0;
     padding: 30px 10px;
@@ -244,8 +258,8 @@ footer{
     overflow: auto;
     padding: 5px;
     margin: 2px;
-    border: 2px solid #000;
+    border: 2px solid #fff;
     font: 14px "Lucida Sans Unicode", "Lucida Grande", sans-serif; 
-    color: #000;
+    color: #fff;
     }
 }
