--- a/css/style2.scss
+++ b/css/style2.scss
@@ -129,7 +129,7 @@ nav
         transition: all 0.1s ease;
         color: white;
         font-size: 20px;
-        background-color: #b687a0;
+        background-color: #c99bd2;
     
         // float: right;
         // padding: 10px 10px;
@@ -144,7 +144,7 @@ nav
             display: none;
         }
         #sun{
-            background-color: #b687a0;
+            background-color: #c99bd2;
         }
     }
     //   Changes
